--- a/myInfo.html
+++ b/myInfo.html
@@ -164,6 +164,8 @@
                     <strong>随机点菜器</strong><a target="_blank" href="https://zyzcss.github.io/foods/randomFood.html" >戳我查看</a><br/>
                     
                 </p>
+                <p class="new-add">以下为2022更新：</p>
+                <strong>成语接龙提示器</strong><a target="_blank" href="https://zyzcss.github.io/words/words.html" >戳我查看</a><br/>
                    <h4>完</h4>
 
                 </p>
