--- a/ac/616.html
+++ b/ac/616.html
@@ -181,6 +181,9 @@
             text-align: center;
             margin-top: 12px;
         }
+        .cover {
+            height: 80px;
+        }
     </style>
 </head>
 
@@ -209,7 +212,7 @@
     </div>
     <div class="modal hide">
         <div>
-            <div>恭喜你冲中：<span id="result"></span></div>
+            <div>恭喜你抽中：<span id="result"></span></div>
             <div class="modal-btns">
                 <div class="btn" id="check">确认</div>
             </div>
@@ -238,7 +241,7 @@
             // 3
             ['AC娘手办'],
             // 4
-            ['头像挂件'],
+            [{"name":"过山车挂件","image":"https://imgs.aixifan.com/B5QNYwvo0y-JfUNny-677Fzy-qyamAn-BVFNna.gif"},{"name":"《主角竟是我》直播专场挂件","image":"https://imgs.aixifan.com/FUGzkhzbw5-eieuiq-MbmQNj-bUJRNn-myYvqe.png"},{"name":"2022虎年限定挂件","image":"https://imgs.aixifan.com/c1N1vOJk1k-Uf6V73-JJfEVb-mqiIV3-umqQZj.png"},{"name":"2022年AC娘元旦直播挂件","image":"https://imgs.aixifan.com/jxuUVwUhVO-VFBz22-m6BVFr-aENjMb-nYNVri.png"},{"name":"暖冬麻辣烫挂件","image":"https://imgs.aixifan.com/DUYybLfroQ-Yj2M7v-faQBRr-6fYrqe-QFbIvu.png"},{"name":"直播限定·40万粉纪念挂件","image":"https://imgs.aixifan.com/qIc3rAsZCh-jAvM7b-RFv6Rv-zYFbMz-ZBbAry.png"},{"name":"2021中秋限定兔耳包子头","image":"https://imgs.aixifan.com/sWnkD6EsLl-jEnYZ3-INnI7r-AVziqq-vQrYNj.png"},{"name":"高瓦数电灯泡","image":"https://imgs.aixifan.com/GbzrYtqwNk-jYZNjq-2yuqIz-JzM7ja-QfQ7va.gif"},{"name":"妈见打挂件","image":"https://imgs.aixifan.com/q6AqxgnCLC-uyMjam-uyaqQ3-VNNjyi-QJZR7b.png"},{"name":"AC春游挂件","image":"https://imgs.aixifan.com/1798rsY2lk-BZz6F3-Q7Njem-BNfYNr-m6bQfu.png"},{"name":"白色情人节限定挂件","image":"https://imgs.aixifan.com/557QsNfwB7-ummYzy-Qriaiy-FzUzau-m2MVV3.png"},{"name":"晚安计划挂件","image":"https://imgs.aixifan.com/C2lAdTgIDT-M3Mjma-VzABFn-bQRrIz-QRVZJf.gif"},{"name":"胆小“鬼”","image":"https://imgs.aixifan.com/1B4N2SXvSp-7Vfei2-ZJv6re-ueeAr2-URjmmi.png"},{"name":"网络一线牵","image":"https://imgs.aixifan.com/SBaxfj4Iow-yymiqm-FfiMFr-URVnUb-iqa6Bn.gif"},{"name":"o湗心鎻暧﹎","image":"https://imgs.aixifan.com/c9sibK9f0u-ZFFbm2-vQjaMj-RNnIJv-fUJbUj.gif"},{"name":"蕉易战雷神","image":"https://imgs.aixifan.com/HWqWjdxk7P-VvMJfq-rMNrMv-2e2eI3-yMBNvm.png"},{"name":"阳光普照","image":"https://imgs.aixifan.com/GyMkwF3Re5-nuAJBb-6Bf67n-iEZnUn-3ueuAz.gif"},{"name":"欢迎回家挂件","image":"https://imgs.aixifan.com/cms/2020_04_16/1587045322568.png"},{"name":"AC娘的大触挂件·原谅绿","image":"https://imgs.aixifan.com/cms/2020_04_09/1586434149494.png"},{"name":"AC娘的大触挂件·桃花粉","image":"https://imgs.aixifan.com/cms/2020_04_09/1586433989480.png"},{"name":"王者天下挂件","image":"https://imgs.aixifan.com/cms/2020_04_01/1585750745622.png"},{"name":"FLAG天秀挂件","image":"https://imgs.aixifan.com/cms/2020_03_02/1583142760960.png"},{"name":"TapTap红包保卫战挂件","image":"https://imgs.aixifan.com/cms/2020_02_28/1582880414993.gif"},{"name":"煎个蛋挂件","image":"https://imgs.aixifan.com/cms/2020_02_25/1582625746741.png"},{"name":"金蕉满堂挂件","image":"https://imgs.aixifan.com/cms/2020_02_20/1582194108373.png"},{"name":"全明星拜年挂件","image":"https://imgs.aixifan.com/cms/2020_02_17/1581927008508.png"},{"name":"医用外科口罩(虚拟)","image":"https://imgs.aixifan.com/cms/2020_02_05/1580900985417.jpg"},{"name":"爱在AC挂件","image":"https://imgs.aixifan.com/cms/2020_01_21/1579608082927.png"},{"name":"脑洞迷彩帽挂件","image":"https://imgs.aixifan.com/cms/2020_01_21/1579589001637.png"},{"name":"“烈焰红唇”挂件","image":"https://imgs.aixifan.com/cms/2020_01_15/1579092216649.png"},{"name":"春运小火车挂件","image":"https://imgs.aixifan.com/cms/2020_01_07/1578367587255.gif"},{"name":"脑洞挂件","image":"https://imgs.aixifan.com/cms/2020_01_02/1577953917187.gif"},{"name":"懵圈挂件","image":"https://imgs.aixifan.com/cms/2019_07_11/1562810255864.jpg"},{"name":"火锅挂件","image":"https://imgs.aixifan.com/cms/2019_12_11/1576031097097.gif"},{"name":"2020春晚直播挂件","image":"https://imgs.aixifan.com/cms/2019_12_06/1575620627814.png"},{"name":"2020新春舞狮头像框","image":"https://imgs.aixifan.com/cms/2019_12_06/1575620340931.png"},{"name":"硬核限定挂件","image":"https://imgs.aixifan.com/cms/2019_11_29/1575024966205.png"},{"name":"“100分！”头像框","image":"https://imgs.aixifan.com/cms/2019_11_04/1572849577690.gif"},{"name":"我爱游戏动态挂件","image":"https://imgs.aixifan.com/cms/2019_11_01/1572590849879.gif"},{"name":"周年纪念挂件","image":"https://imgs.aixifan.com/cms/2019_10_17/1571295141408.png"},{"name":"陨石挂件","image":"https://imgs.aixifan.com/cms/2019_10_14/1571050813987.gif"},{"name":"追番乐无边挂件","image":"https://imgs.aixifan.com/cms/2019_09_30/1569834638213.png"},{"name":"逼死强迫症挂件","image":"https://imgs.aixifan.com/cms/2019_09_11/1568186437017.png"},{"name":"主机游戏头像挂件","image":"https://imgs.aixifan.com/cms/2019_08_30/1567140899113.gif"},{"name":"土豪头像框","image":"https://imgs.aixifan.com/cms/2019_08_29/1567075354630.png"},{"name":"头晕星星挂件","image":"https://imgs.aixifan.com/cms/2019_08_27/1566909166412.gif"},{"name":"情谊锁定挂件","image":"https://imgs.aixifan.com/cms/2019_08_27/1566908923422.png"},{"name":"土味101挂件","image":"https://imgs.aixifan.com/cms/2019_07_10/1562742186617.gif"},{"name":"AC娘变身挂件","image":"https://imgs.aixifan.com/cms/2019_07_03/1562136287889.png"},{"name":"猴子の心动态挂件","image":"https://imgs.aixifan.com/cms/2019_06_13/1560421184892.gif"},{"name":"AC娘动态挂件","image":"https://imgs.aixifan.com/cms/2019_06_13/1560421118479.gif"},{"name":"裸奔头像挂件","image":"https://imgs.aixifan.com/cms/2019_06_06/1559807593075.png"},{"name":"清凉一夏挂件","image":"https://imgs.aixifan.com/cms/2019_05_29/1559115146061.png"},{"name":"趴趴AC娘挂件","image":"https://imgs.aixifan.com/cms/2019_05_24/1558683207909.jpg"},{"name":"恰柠檬头像框","image":"https://imgs.aixifan.com/cms/2019_05_24/1558683281859.jpg"},{"name":"新手任务挂件","image":"https://imgs.aixifan.com/cms/2019_04_11/1554967050946.png"},{"name":"“怂”头像框挂件","image":"https://imgs.aixifan.com/cms/2019_04_02/1554180712342.png"},{"name":"暖心冬日头像框","image":"https://imgs.aixifan.com/cms/2019_01_14/1547434486917.png"},{"name":"冰寒冬日挂件","image":"https://imgs.aixifan.com/cms/2019_01_10/1547093211326.png"},{"name":"御宅头像框","image":"https://imgs.aixifan.com/cms/2019_01_09/1547008205692.png"},{"name":"现充头像框","image":"https://imgs.aixifan.com/cms/2019_01_09/1547008139198.png"},{"name":"天气预爆头像框","image":"https://imgs.aixifan.com/cms/2020_06_13/1592018306056.png"},{"name":"鹿角头像无框","image":"https://imgs.aixifan.com/cms/2018_12_24/1545634347030.png"},{"name":"七月许愿祝福挂件","image":"https://imgs.aixifan.com/cms/2018_09_03/1535955488337.png"},{"name":"举铁达人","image":"https://imgs.aixifan.com/cms/2018_07_24/1532403748438.png"},{"name":"AC娘包子头(红)","image":"https://cdn.aixifan.com/dotnet/artemis/u/cms/www/201712/071010020b88m1r4.png"},{"name":"【2017春晚限量款】包子头头饰","image":"https://imgs.aixifan.com/cms/2020_06_13/1592017806137.png"},{"name":"AC娘包子头(蓝）","image":"https://imgs.aixifan.com/cms/2016_10_29/1477753007487.jpg"},{"name":"AC药丸挂件","image":"https://imgs.aixifan.com/N52qUTFcPX-qERfUn-rMbQZr-YZNBRn-ANn6nu.png"}],
             // 5
             ['金香蕉*6', '金香蕉*66', '金香蕉*616', '金香蕉*1666'],
             // 6
@@ -268,8 +271,14 @@
             const target = prize[current]
             const len = target.length
             const random = Math.floor(Math.random() * len)
-            const resultText = target[random]
-            result.innerText = resultText
+            let resultText = target[random]
+            if (current == 4) {
+                // 挂件
+                result.innerHTML = `<div style="text-align: center;margin: 20px;"><image src="${resultText.image}" class="cover"/><div>${resultText.name}</div></div>`          
+                resultText = target[random].name
+            } else {
+                result.innerText = resultText
+            }
             shawn.classList.remove('hide')
             modal.classList.remove('hide')
             const div = document.createElement('div')
@@ -299,7 +308,7 @@
             *  6   5   4
             */
             // 0~7
-            const next = Math.floor(Math.random() * 8) + 10 
+            const next = Math.floor(Math.random() * 8) + 8 
             // let bezier = BezierEasing(0.08, 0.02, 0, 0.99999)
             dp(0, next, 100)
             function dp(cur, end, time) {
